force-app/main/default/objects/tdc_tra__Rollup_Log__c/tdc_tra__Rollup_Log__c.object-meta.xml
<CustomObject>
    <label>Rollup Log</label>
    <nameField>
        <label>Rollup Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rollup Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>