force-app/main/default/objects/tdc_tra__Rollup_Log__c/fields/tdc_tra__Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Batch_Id__c</fullName>
    <label>Batch Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>