force-app/main/default/objects/tdc_tra__Rollup_Log__c/fields/tdc_tra__Number_Of_Success__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Number_Of_Success__c</fullName>
    <label>Number Of Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>