force-app/main/default/objects/tdc_tra__Rollup_Log__c/fields/tdc_tra__Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>