force-app/main/default/objects/tdc_tra__Rollup_Log__c/fields/tdc_tra__Total_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>tdc_tra__Total_Records_Processed__c</fullName>
    <label>Total Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>